// user.proto - gRPC contract for UserService
syntax = "proto3";
package user;

// Request message for fetching a user by ID
message GetUserRequest {
string id = 1;        // The UUID of the user to fetch
}

// Response message representing a User
message UserResponse {
string id    = 1;     // Unique identifier of the user
string email = 2;     // Email address
string role  = 3;     // Role (e.g., "user", "admin")
}

// Request message for updating a profile
message UpdateProfileRequest {
string id              = 1; // The UUID of the user making the update
// Only include fields if they should be updated
string email           = 2;
string newPassword     = 3;
string currentPassword = 4;
}

message FindUserRequest {
  oneof identifier {
    string email = 1;
    string phone = 2;   // E.164 format, e.g. "+994501234567"
  }
}

// The gRPC service definition for User operations
service UserService {
// Fetch a user by ID
rpc FindUser (FindUserRequest) returns (UserResponse);
rpc GetUser(GetUserRequest) returns (UserResponse);

// Update the profile (email and/or password)
rpc UpdateProfile(UpdateProfileRequest) returns (UserResponse);
}

